--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@
 }
 
 body {
-    /* overflow: hidden; */
+    overflow-x: hidden;
     background-color: #010125;
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     color: white;
     gap: .75em;
@@ -20,7 +20,7 @@ body {
 
 h1.title {
     font-size: 25pt;
-    margin: 2.5em 0;
+    margin: 2em 0;
 }
 
 .input_user {
@@ -45,6 +45,18 @@ h1.title {
     cursor: pointer;
 }
 
+.informations{
+    margin-top: 2em;
+    /* margin: auto; */
+    padding: 10px 25px;
+    width: 90vw;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    row-gap: 2em;
+}
+
 .div_user {
     width: 285px;
     display: grid;
@@ -52,14 +64,14 @@ h1.title {
     text-align: center;
     margin-top: 1em;
     padding: 10px 25px;
-    background-color: rgba(240, 248, 255, 0.175);
     border-radius: 5px;
+    background-color: rgba(240, 248, 255, 0.05);
 }
 
 .div_user .avatar {
     box-sizing: border-box;
     margin: auto;
-    width: 200px;
+    width: 150px;
     height: auto;
     border-radius: 100%;
     box-shadow: 0 0 5px orange;
@@ -86,26 +98,59 @@ h1.title {
     margin-bottom: 5em;
 }
 .div_repos .repos{
-    width: 80vw;
+    width: 38em;
     display: grid;
     gap: .75em;
     padding: 10px 20px;
     background-color: rgba(240, 248, 255, 0.068);
 }
-.repos div{
+.repos>div{
     display: flex;
     justify-content: space-between;
 }
 .repos .nameRepos{
     font-size: 12pt;
 }
-.repos .urlRepos{
-    text-decoration: none;
-    font-size: 10pt;
-    color: rgb(67, 207, 161);
-
-}
 .repos .dateRepos{
     font-size: 9pt;
 }
+.othersInfoRepo{
+    font-size: 9pt;
+}
+.urlRepos{
+    text-decoration: none;
+    font-size: 10pt;
+    color: rgb(67, 207, 161);
+    word-wrap: break-word;
+}
 
+.info_counts{
+    display: flex;
+    gap: 12px;
+}
+.info_counts > span{
+    display: flex;
+    gap: 4px;
+    align-items: flex-end;
+    font-size: 11.5pt;    
+}
+.info_counts abbr{
+    cursor: default; 
+    text-decoration: none;
+}
+
+footer{
+    background-color: #0202137c;
+    width: 100vw;
+    text-align: center;
+    margin-bottom: 0;
+}
+
+/* 
+
+    .info_counts
+    .starsRepos
+    .forksRepos
+    .viewsRepos
+
+*/
