--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+@media screen and (max-width: 500px) {
+    .informations > * 
+    {
+        word-wrap: break-word !important;
+    }
+    .informations *:not(.name){
+        font-size: 10pt;
+    }
+    .div_repos .repos{
+        width: 22em !important;
+    }
+    .informations > div, .repos>div{
+        flex-wrap: wrap !important;
+    }
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -101,10 +117,6 @@ h1.title {
     justify-content: space-around;
 }
 
-.block {
-    visibility: hidden;
-}
-
 .div_repos{
     margin: 1em 0;
     display: grid;
@@ -121,6 +133,7 @@ h1.title {
 .repos>div{
     display: flex;
     justify-content: space-between;
+    gap: 15px 5px;
 }
 .repos .nameRepos{
     font-size: 12pt;
@@ -176,6 +189,10 @@ footer div{
     display: flex;
     justify-content: center;
     gap: 15px;
+}
+
+.block {
+    visibility: hidden;
 }
 
 @keyframes moveSearch {
