--- a/style.css
+++ b/style.css
@@ -1,240 +1,250 @@
-@media screen and (max-width: 500px) {
-    .informations > * 
-    {
-        word-wrap: break-word !important;
-    }
-    .informations *:not(.name){
-        font-size: 10pt;
-    }
-    .div_repos .repos{
-        width: 22em !important;
-    }
-    .informations > div, .repos>div{
-        flex-wrap: wrap !important;
-    }
+@media screen and (max-width: 650px) {
+  .informations * {
+    font-size: 10pt !important;
+  }
+  .informations .name {
+    font-weight: 800;
+  }
+  .div_repos .repos {
+    width: 22em !important;
+  }
+  .informations > div,
+  .repos > div {
+    flex-wrap: wrap !important;
+  }
+  .othersInfoRepo {
+    align-items: flex-start !important;
+  }
+  .othersInfoRepo .urlRepos {
+    width: 20px;
+  }
+  .othersInfoRepo .urlRepos > span {
+    display: none;
+  }
 }
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  word-wrap: break-word;
 }
 
 body {
-    overflow-x: hidden;
-    background-color: #010125;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    color: white;
-    gap: .75em;
-    font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+  background-color: #010125;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  color: white;
+  gap: 0.75em;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 h1.title {
-    font-size: 25pt;
-    margin: 1.75em 0;
+  font-size: 25pt;
+  margin: 1.75em 0;
 }
 
 .input_user {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1em;
-    margin: .5em 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+  margin: 0.5em 0;
 }
 
 .input_user input {
-    border: none;
-    border-radius: 2px;
-    padding: 5px;
-    width: 300px;
+  border: none;
+  border-radius: 2px;
+  padding: 5px;
+  width: 300px;
 }
 
 .input_user button {
-    padding: 5px 10px;
-    width: 100px;
-    cursor: pointer;
+  padding: 5px 10px;
+  width: 100px;
+  cursor: pointer;
 }
 
-.imgSearch{
-    z-index: -1;
-    position: absolute;
-    top: 50%;
-    bottom: 50%;
-    z-index: -1;
+.imgSearch {
+  z-index: -1;
+  position: absolute;
+  top: 50%;
+  bottom: 50%;
+  z-index: -1;
 }
-.imgSearch svg{
-    transform-origin: center center;
-    position: relative;
-    color: #3591A755;
-    animation: moveSearch 5s infinite linear;
-}
-
-.informations{
-    margin-top: 2em;
-    /* margin: auto; */
-    padding: 10px 25px;
-    width: 90vw;
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    row-gap: 2em;
+.imgSearch svg {
+  transform-origin: center center;
+  position: relative;
+  color: #3591a755;
+  animation: moveSearch 5s infinite linear;
 }
 
+.informations {
+  margin-top: 2em;
+  /* margin: auto; */
+  padding: 10px 25px;
+  width: 90vw;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  row-gap: 2em;
+}
+
+/* div com informações do usuário */
 .div_user {
-    width: 285px;
-    display: grid;
-    gap: .5em;
-    text-align: center;
-    margin-top: 1em;
-    padding: 10px 25px;
-    border-radius: 5px;
-    background-color: rgba(240, 248, 255, 0.05);
+  width: 285px;
+  display: grid;
+  gap: 0.5em;
+  text-align: center;
+  margin-top: 1em;
+  padding: 10px 25px;
+  border-radius: 5px;
+  background-color: rgba(240, 248, 255, 0.05);
 }
-
 .div_user .avatar {
-    box-sizing: border-box;
-    margin: auto;
-    width: 150px;
-    height: auto;
-    border-radius: 100%;
-    box-shadow: 0 0 5px orange;
+  box-sizing: border-box;
+  margin: auto;
+  width: 150px;
+  height: auto;
+  border-radius: 100%;
+  box-shadow: 0 0 5px orange;
 }
-
 .div_user .bio {
-    margin: .25em 0;
+  margin: 0.25em 0;
 }
-
 .div_user .pop {
-    margin: .75em 0;
-    display: flex;
-    justify-content: space-around;
+  margin: 0.75em 0;
+  display: flex;
+  justify-content: space-around;
 }
 
-.div_repos{
-    margin: 1em 0;
-    display: grid;
-    gap: 1em;
-    margin-bottom: 5em;
+/* div com informações dos repositórios do usuários */
+.div_repos {
+  margin: 1em 0;
+  display: grid;
+  gap: 1em;
+  margin-bottom: 5em;
 }
-.div_repos .repos{
-    width: 38em;
-    display: grid;
-    gap: .75em;
-    padding: 10px 20px;
-    background-color: rgba(240, 248, 255, 0.068);
+.div_repos .repos {
+  width: 38em;
+  display: grid;
+  gap: 0.75em;
+  padding: 10px 20px;
+  background-color: rgba(240, 248, 255, 0.068);
+  overflow: hidden;
 }
-.repos>div{
-    display: flex;
-    justify-content: space-between;
-    gap: 15px 5px;
+.repos .nameDateRepos, .repos .othersInfoRepo {
+  display: flex;
+  justify-content: space-between;
+  gap: 15px 5px;
 }
-.repos .nameRepos{
-    font-size: 12pt;
+.nameDateRepos .nameRepos {
+  font-size: 12pt;
 }
-.repos .dateRepos{
-    font-size: 9pt;
+.nameDateRepos .dateRepos {
+  font-size: 9pt;
 }
-.othersInfoRepo{
-    font-size: 9pt;
+.othersInfoRepo {
+  font-size: 9pt;
 }
-.urlRepos{
-    text-decoration: none;
-    font-size: 10pt;
-    color: rgb(67, 207, 161);
-    word-wrap: break-word;
+.othersInfoRepo .urlRepos {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  text-decoration: none;
+  font-size: 10pt;
+  color: rgb(67, 207, 161);
+  word-wrap: break-word;
+}
+.othersInfoRepo .info_counts {
+  display: flex;
+  gap: 12px;
+}
+.othersInfoRepo .info_counts > span {
+  display: flex;
+  gap: 4px;
+  align-items: flex-end;
+  font-size: 11.5pt;
+}
+.othersInfoRepo .info_counts abbr {
+  cursor: default;
+  text-decoration: none;
 }
 
-.info_counts{
-    display: flex;
-    gap: 12px;
+footer {
+  margin-top: auto;
+  background-color: #0202137c;
+  width: 100vw;
+  margin-bottom: 0;
+  padding: 10px;
+  font-size: 8pt;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
 }
-.info_counts > span{
-    display: flex;
-    gap: 4px;
-    align-items: flex-end;
-    font-size: 11.5pt;    
+footer a {
+  text-decoration: none;
+  color: rgb(67, 207, 161) !important;
 }
-.info_counts abbr{
-    cursor: default; 
-    text-decoration: none;
+footer > span {
+  font-size: 10pt;
 }
-
-footer{
-    margin-top: auto;
-    background-color: #0202137c;
-    width: 100vw;
-    margin-bottom: 0;
-    padding: 10px;
-    font-size: 8pt;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 10px;
-}
-footer a{
-    text-decoration: none;
-    color: rgb(67, 207, 161) !important;
-}
-footer > span{
-    font-size: 10pt;
-}
-footer div{
-    display: flex;
-    justify-content: center;
-    gap: 15px;
+footer div {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
 }
 
 .block {
-    visibility: hidden;
+  visibility: hidden;
 }
 
 @keyframes moveSearch {
-    0%{
-        transform: rotateZ(0);
-        translate: 0;
-    }
-    10%{
-        translate: -2px;
-    }
-    20%{
-        translate: -10px 5px;
-        transform: rotateZ(0);
-    }
-    30%{
-        translate: -20px 10px;
-        transform: rotateZ(75deg);
-    }
-    40%{
-        translate: -10px 5px;
-    }
-    50%{
-        translate: 0;
-    }
-    55%{
-    }
-    60%{
-        transition: 0;
-    }
-    70%{
-        translate: 10px -5px;
-        transform: rotateZ(75deg);
-    }
-    80%{
-        translate: 20px -10px;
-        transform: rotateZ(0);
-    }
-    90%{
-        translate: 10px -5px;
-    }
-    100%{
-        translate: 0;
-        transform: rotateZ(0);
-    }
+  0% {
+    transform: rotateZ(0);
+    translate: 0;
+  }
+  10% {
+    translate: -2px;
+  }
+  20% {
+    translate: -10px 5px;
+    transform: rotateZ(0);
+  }
+  30% {
+    translate: -20px 10px;
+    transform: rotateZ(75deg);
+  }
+  40% {
+    translate: -10px 5px;
+  }
+  50% {
+    translate: 0;
+  }
+  60% {
+    transition: 0;
+  }
+  70% {
+    translate: 10px -5px;
+    transform: rotateZ(75deg);
+  }
+  80% {
+    translate: 20px -10px;
+    transform: rotateZ(0);
+  }
+  90% {
+    translate: 10px -5px;
+  }
+  100% {
+    translate: 0;
+    transform: rotateZ(0);
+  }
 }
