--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@media screen and (max-width: 800px) {
+    body{
+        overflow-x: auto;
+    }
+}
 @media screen and (max-width: 650px) {
   .informations * {
     font-size: 10pt !important;
