--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 @media screen and (max-width: 800px) {
-    body{
-        overflow-x: auto;
-    }
+  body {
+    overflow-x: auto;
+  }
 }
 @media screen and (max-width: 650px) {
   .informations * {
     font-size: 10pt !important;
   }
   .informations .name {
-    font-weight: 800;
+    font-weight: 750;
   }
   .div_repos .repos {
     width: 22em !important;
@@ -27,6 +27,40 @@
     display: none;
   }
 }
+@media screen and (min-width: 1024px) {
+  .input_user {
+    width: 50vw;
+  }
+  .input_user input {
+    width: 50% !important;
+  }
+  .input_user * {
+    font-size: 15pt !important;
+  }
+  .informations {
+    column-gap: 2rem;
+  }
+  .informations * {
+    font-size: 13pt !important;
+  }
+  .informations .name,
+  .nameRepos {
+    font-size: 18pt !important;
+  }
+  .informations .name {
+    font-weight: 700;
+  }
+  .informations > div,
+  .repos > div {
+    flex-wrap: wrap !important;
+  }
+  footer {
+    gap: 15px;
+  }
+  footer > span {
+    font-size: 14pt !important;
+  }
+}
 
 * {
   padding: 0;
@@ -37,7 +71,7 @@
 
 body {
   overflow-x: hidden;
-  background-color: #010125;
+  background-color: #010115;
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -52,6 +86,10 @@ body {
 h1.title {
   font-size: 25pt;
   margin: 1.75em 0;
+  margin-top: 2.5em;
+}
+h1.title a {
+  color: #efefef;
 }
 
 .input_user {
@@ -86,23 +124,29 @@ h1.title {
 .imgSearch svg {
   transform-origin: center center;
   position: relative;
-  color: #3591a755;
+  color: #3591a738;
   animation: moveSearch 5s infinite linear;
 }
 
 .informations {
   margin-top: 2em;
+  margin-bottom: 1em;
   /* margin: auto; */
   padding: 10px 25px;
   width: 90vw;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: flex-start;
   flex-wrap: wrap;
   row-gap: 2em;
 }
 
 /* div com informações do usuário */
+.div_user,
+.div_repos .repos {
+  background-color: #1c212850;
+}
+
 .div_user {
   width: 285px;
   display: grid;
@@ -111,7 +155,7 @@ h1.title {
   margin-top: 1em;
   padding: 10px 25px;
   border-radius: 5px;
-  background-color: rgba(240, 248, 255, 0.05);
+  /* background-color: rgba(240, 248, 255, 0.05); */
 }
 .div_user .avatar {
   box-sizing: border-box;
@@ -142,10 +186,10 @@ h1.title {
   display: grid;
   gap: 0.75em;
   padding: 10px 20px;
-  background-color: rgba(240, 248, 255, 0.068);
   overflow: hidden;
 }
-.repos .nameDateRepos, .repos .othersInfoRepo {
+.repos .nameDateRepos,
+.repos .othersInfoRepo {
   display: flex;
   justify-content: space-between;
   gap: 15px 5px;
@@ -156,6 +200,12 @@ h1.title {
 .nameDateRepos .dateRepos {
   font-size: 9pt;
 }
+
+.descRepo .desc {
+  font-size: 11pt;
+  color: #efefefe0;
+}
+
 .othersInfoRepo {
   font-size: 9pt;
 }
